More tests, direct usage of annotations on configuration classes